@@ -42,6 +42,7 @@ import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
@@ -185,7 +186,7 @@ public class PDFServlet extends HttpServlet implements ExternallyConfigured {
                 InputStream is = resolveAndOpenStream(uri);
                 if (is != null) {
                     try {
-                        URL url = new URL(uri + "?JSESSIONID=" + req.getSession().getId());
+                        URI url = new URI(uri + "?JSESSIONID=" + req.getSession().getId());
                         if (url.getPath() != null && url.getPath().toLowerCase().endsWith(".pdf")) {
                             PdfReader reader = textOutputDevice.getReader(url);
                             PDFAsImage image = new PDFAsImage(url);
